# PersonalizeAI

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
apps/: Memory_Chatbot.py  README.md
apps/.streamlit/: config.toml
apps/outputs/: 大模型的目前的应用现状，未来的可以加速落地的行业以及行业应用(简单报告).md  大模型的目前的应用现状，未来的可以加速落地的行业以及行业应用.md  富国基金公司的负面消息.md  易方达基金的负面消息.md  测试调研模块是否正常.md
apps/pages/: 3_Prompt_template.py  6_Langchain_Researcher.py
apps/service/: gpt_research.py
apps/service/llm/: get_config_openai.py
graphRAG_demo/: .env  settings.yaml
graphRAG_demo/cache/community_reporting/: create_community_report-chat-v2-06fab3c567775bb96483e4071c577bbf  create_community_report-chat-v2-19d0fd7e7aebb2779f6e5b1e6db15af7  create_community_report-chat-v2-1f229be2a25a0b5ba97816d911063b90  create_community_report-chat-v2-20e419bcf9be457eb60e18df3b94f9b1  create_community_report-chat-v2-20ff6b8caf3a63bd11bc663d07cdd276  create_community_report-chat-v2-2170c8a4867d4753cd9c3274edcc9b33  create_community_report-chat-v2-28ddef3363e729cc944329bcfa740335  create_community_report-chat-v2-2b7423208e1166495565b5b561e3ea20  create_community_report-chat-v2-3fe856bdd6ea411ab98993ca7591c50c  create_community_report-chat-v2-48a5794030e916e652b97a2b40d0e0fa  create_community_report-chat-v2-4b3c5a7738256b3a0695368e29e29877  create_community_report-chat-v2-4ea5eb6da61aff4f9bf85bb3fdf90acb  create_community_report-chat-v2-5ba2fb5b2862a0ea0b7f51c03ad95bb1  (+32 more)
graphRAG_demo/input/: 新股市值申购业务指引_UF20.docx
langgraph_agent/: main.py
openai_usage/: bill.py
(+393 files in other folders)
